[tool.poetry]
name = "advent_helper"
version = "0.1.0"
description = ""
authors = ["Artur H. Lange <artur@arc2.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
